--- a/readme
+++ b/readme
@@ -31,7 +31,7 @@ It was built as an assignment for the Arvyax internship.
 
 ## Live Links
 
-- **Frontend (Vercel):** `https://YOUR-VERCEL-URL.vercel.app`
+- **Frontend (Vercel):** `hhttps://music-mood-ebon.vercel.app/`
 - **Backend (Render):** `https://music-mood-86s0.onrender.com`
 
 Replace the frontend URL above with your actual Vercel link.
